# FastAPI-summarize

./: .env.example  .gitignore  README.md  frontend.py  main.py  pyproject.toml  run.py
.streamlit/: config.toml
app/: __init__.py
app/api/v1/: router.py
app/api/v1/endpoints/: health.py  summarize.py
app/core/: config.py
app/services/: __init__.py  summarizer.py
